--- a/style.css
+++ b/style.css
@@ -1,1 +1,56 @@
+* {
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+}
+
+section.navBar {
+  height: calc(100%-30px);
+  margin: 15px;
+  padding: 1em;
+  top: 0;
+  left: 0;
+  position: relative;
+  text-align: center;
+  border:3px dashed blueviolet
+}
+
+#logo {
+  height: 200px;
+  width: 70px;
+  float: left;
+  border:3px dashed blueviolet
+}
+
+#nav4 {
+  float: right;
+  padding: 10px;
+  margin: auto;
+  vertical-align: center;
+  width: 17%;
+  border:3px dashed blueviolet
+}
+
+#nav3 {
+  float: right;
+  padding: 10px;
+  margin: auto;
+  vertical-align: center;
+}
+
+#nav2 {
+  float: right;
+  padding: 10px;
+  margin: auto;
+  vertical-align: center;
+}
+
+#nav1 {
+  float: right;
+  padding: 10px;
+  margin: auto;
+  vertical-align: center;
+}
 
