--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ body, html {
 }
 
 section.navBar {
-  height: calc(100%-30px);
-  margin: 15px;
-  padding: 1em;
+  height: 80px;
   top: 0;
   left: 0;
   position: relative;
@@ -20,8 +18,9 @@ section.navBar {
 #logo {
   height: 200px;
   width: 70px;
-  float: left;
-  border:3px dashed blueviolet
+  top: 0;
+  left: 0;
+  display: inline;
 }
 
 #nav4 {
