--- a/style.css
+++ b/style.css
@@ -1,55 +1,87 @@
 * {
   box-sizing: border-box;
 }
+html {
+  width: 100%;
+}
 
-body, html {
-  height: 100%;
+body {
+  max-width: 960px;
+  margin: auto;
 }
 
 section.navBar {
-  height: 80px;
-  top: 0;
-  left: 0;
-  position: relative;
-  text-align: center;
-  border:3px dashed blueviolet
-}
+  width: 100%;
+  height: 85;
+  margin: 0 0 30px;
+  vertical-align: center;
+ }
 
 #logo {
+  float: left;
+  margin: 0 15px 15px 0;
+}
+
+nav ul li {
+  display: block;
+  float: left;
+  margin: 28px 35px 42px 35px;
+  text-align: center;
+}
+
+#mainImage {
+  margin: 15px 0 15px 0;
+}
+
+#sub1 {
+  margin: 15px, 15px, 15px, 0;
+}
+
+#sub2 {
+  margin: 15px 15px 15px 15px;
+}
+
+#sub3 {
+  margin: 15px, 0px, 15px, 15px;
+}
+
+#articleImage {
+  margin: 15px, 15px, 15px, 0;
+  float: left;
+}
+
+#articleSubContainer {
+  float: left;
+  margin: 15px 0 15px 15px;
+  width: 450px;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 0 0 7.5px 15px;
+}
+
+#articleText {
+  word-wrap: break-word;
+  font-size: 25px;
+  overflow: auto;
+  max-height: 260px;
+  margin: 15px;
+}
+
+#footer {
+  display: inline-block;
   height: 200px;
-  width: 70px;
-  top: 0;
-  left: 0;
-  display: inline;
+  width: 960px;
+  background-color: rgb(201, 201, 201);
 }
 
-#nav4 {
-  float: right;
-  padding: 10px;
-  margin: auto;
-  vertical-align: center;
-  width: 17%;
-  border:3px dashed blueviolet
+.w3-button w3-grey-rounder {
+  border: black;
+  color: rgb(201, 201, 201);
+  margin: 15px 0 0 0;
+  padding: 0 10px;
+  text-decoration: none;
+  font-size: 25px;
+  border-radius: 20px;
 }
-
-#nav3 {
-  float: right;
-  padding: 10px;
-  margin: auto;
-  vertical-align: center;
-}
-
-#nav2 {
-  float: right;
-  padding: 10px;
-  margin: auto;
-  vertical-align: center;
-}
-
-#nav1 {
-  float: right;
-  padding: 10px;
-  margin: auto;
-  vertical-align: center;
-}
-
